samples/_failures_safe/1761450042_0fd8b5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e2a6a0ab.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_e2a6a0ab.c:154:21: error: expected declaration or statement at end of input
  154 |                     int new_dist = dist[min_index] + g->edges[i].weight;
      |                     ^~~
./samples/SAFE/__tmp_e2a6a0ab.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e2a6a0ab.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e2a6a0ab.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e2a6a0ab.c:154:21: error: expected declaration or statement at end of input
